IE 11 flex-wrap fix

--- a/css/style.css
+++ b/css/style.css
@@ -932,6 +932,7 @@ footer p {
   display: -ms-flexbox;
   display: flex;
 
+  width: 760px;
   margin-top: 47px;
 
   -ms-flex-wrap: wrap;
